WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234814
[PAS] constant-logical-operand clang warnings
https://bugs.webkit.org/show_bug.cgi?id=234814
Summary
[PAS] constant-logical-operand clang warnings
Philippe Normand
Reported
2022-01-03 05:22:16 PST
/app/webkit/WebKitBuild/Release/bmalloc/Headers/bmalloc/pas_utils.h:583:12: warning: use of logical '||' with constant operand [-Wconstant-logical-operand] if ((0 || 0)) ^ ~ /app/webkit/WebKitBuild/Release/bmalloc/Headers/bmalloc/pas_utils.h:583:12: note: use '|' for a bitwise operation
Attachments
Patch
(1.30 KB, patch)
2022-01-03 05:24 PST
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2022-01-03 05:24:41 PST
Created
attachment 448228
[details]
Patch
Martin Robinson
Comment 2
2022-01-04 04:31:20 PST
Comment on
attachment 448228
[details]
Patch This seems pretty reasonable to me.
EWS
Comment 3
2022-01-04 05:06:40 PST
Committed
r287562
(
245697@main
): <
https://commits.webkit.org/245697@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 448228
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-01-04 05:07:20 PST
<
rdar://problem/87086807
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug