[PAS] constant-logical-operand clang warnings https://bugs.webkit.org/show_bug.cgi?id=234814

Patch by Philippe Normand <pnormand@igalia.com> on 2022-01-04
Reviewed by Martin Robinson.

* libpas/src/libpas/pas_config_prefix.h: Use double exclamation marks in declarations to
force the compiler to interpret them as booleans and avoid constant-logical-operand
warnings.


Canonical link: https://commits.webkit.org/245697@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287562 268f45cc-cd09-0410-ab3c-d52691b4dbfc